# textkit

./: .gitignore  README.md  config_demo.py  main.py  pyproject.toml  pytest.ini  replace_imports.py  test_encoding_demo.py  test_line_ending_demo.py  workspace.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  performance.yml  release.yml  security.yml
bases/text_processing/cli_interface/: __init__.py  abstractions.py  container.py  core.py  core_refactored.py  factory.py  interfaces.py  main.py
bases/text_processing/cli_interface/commands/: __init__.py  clipboard_cmd.py  crypto_cmd.py  iconv_cmd.py  rules_cmd.py  status_cmd.py  text_cmd.py  transform_cmd.py
bases/text_processing/cli_interface/handlers/: __init__.py  base_handler.py  crypto_handler.py  rules_handler.py  transform_handler.py
bases/text_processing/cli_interface/middleware/: __init__.py  error_handler.py  output_formatter.py  output_manager.py
bases/text_processing/cli_interface/shared/: __init__.py  standard_options.py
bases/text_processing/interactive_session/: __init__.py  interactive.py
components/: __init__.py
components/async_core/: __init__.py  async_engine.py  async_io.py  performance.py  streaming.py
components/command_handler/: __init__.py  core.py  patterns.py  validation.py
components/common_utils/: __init__.py  error_handlers.py  logging_utils.py  validation_helpers.py
components/config_manager/: __init__.py  core.py  settings.py  types.py
components/crypto_engine/: __init__.py  core.py  crypto.py  crypto_transformations.py  types.py
components/dependency_injection/: __init__.py  container.py  exceptions.py
components/exceptions/: __init__.py  base_exceptions.py  configuration_exceptions.py  io_exceptions.py  transformation_exceptions.py  validation_exceptions.py
components/help_system/: __init__.py  core.py  generators.py
components/io_handler/: core.py  manager.py
components/rule_parser/: __init__.py  core.py  types.py
components/text_core/: __init__.py  core.py  exceptions.py  models.py  transformation_base.py  types.py
components/text_core/engine/: __init__.py  transformation_engine.py
components/text_core/factories/: __init__.py  transformation_factory.py
components/text_core/orchestrators/: __init__.py  transformation_orchestrator.py
components/text_core/parsers/: __init__.py  rule_parser.py
components/text_core/transformers/: __init__.py  base_transformer.py  basic_transformer.py  case_transformer.py  encoding_transformer.py  hash_transformer.py  japanese_transformer.py  json_transformer.py  refactored_encoding_transformer.py
components/text_core/transformers/base/: __init__.py  enhanced_base_transformer.py
components/text_core/transformers/mixins/: __init__.py  error_handling_mixin.py  logging_mixin.py  performance_mixin.py  validation_mixin.py
components/text_processing/: __init__.py  container.py  exceptions.py
components/text_processing/async_core/: async_engine.py  async_io.py  streaming.py
components/text_processing/command_handler/: __init__.py  core.py  patterns.py  validation.py
components/text_processing/config_manager/: config.py  core.py  settings.py
components/text_processing/crypto_engine/: core.py  crypto.py  hash_transformations.py  types.py
components/text_processing/help_system/: core.py
components/text_processing/io_handler/: __init__.py  clipboard.py
components/text_processing/text_core/: __init__.py  core.py  models.py  text_format_transformations.py  transformation_base.py  types.py
components/text_processing/text_core/factories/: __init__.py  transformation_factory.py
components/text_processing/text_core/transformers/: __init__.py  base_transformer.py  basic_transformer.py  case_transformer.py  encoding_transformer.py  japanese_transformer.py  line_ending_transformer.py  string_transformer.py
config/: security_config.json
demos/: __init__.py  async_demo.py  config_demo.py
docs/: API.md  ARCHITECTURE.md  COMPONENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Makefile  README.md  api.rst  architecture.rst  components.rst  conf.py  contributing.rst  development.rst  index.rst  overview.rst
projects/crypto_processor/: pyproject.toml
projects/encoding_specialist/: pyproject.toml
projects/format_converter/: pyproject.toml
projects/text_transformer/: pyproject.toml
projects/tsv_translator/: Makefile  README.md  pyproject.toml
projects/tsv_translator/.github/workflows/: ci.yml
projects/tsv_translator/docs/: API.md  EXAMPLES.md
projects/tsv_translator/scripts/: setup-dev.ps1  test.ps1
projects/tsv_translator/tests/: __init__.py  conftest.py  test_analyzer.py  test_width_converter.py
projects/tsv_translator/tests/infrastructure/: __init__.py  test_configuration.py  test_exceptions.py  test_logging_config.py
projects/tsv_translator/tsv_translator/: __init__.py  analyzer.py  cli.py  info_cli.py  width_converter.py
projects/tsv_translator/tsv_translator/infrastructure/: __init__.py  configuration.py  exceptions.py  logging_config.py
test/: conftest.py  test_encoding_transformer.py  test_line_ending_transformer.py  test_main.py
test/bases/text_processing/cli_interface/: test_core.py
test/bases/text_processing/interactive_session/: test_core.py
test/components/text_processing/: test_exceptions.py
test/components/text_processing/config_manager/: test_core.py  test_edge_cases.py  test_logging_config.py
test/components/text_processing/crypto_engine/: test_core.py
test/demos/: __init__.py  test_encoding_demo.py  test_line_ending_demo.py
test/integration/: __init__.py  test_async_integration.py  test_pydantic_integration.py  test_settings_integration.py
tests/: __init__.py
tests/demos/: __init__.py  test_encoding_demo.py  test_line_ending_demo.py
tests/integration/: __init__.py  test_async_integration.py  test_pydantic_integration.py  test_settings_integration.py
tests/unit/: __init__.py
textkit/: __init__.py
(+7 files in other folders)
