[build-system]
requires = ["hatchling", "hatch-polylith-bricks"]
build-backend = "hatchling.build"

[project]
name = "text-transformer"
version = "0.1.0"
description = "Basic text transformation operations - format, case, trimming"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.16.1",
    "rich>=14.1.0",
    "pyperclip>=1.9.0",
]

[project.scripts]
text-transformer = "text_transformer.main:app"

# カスタムトップネームスペース設定
[tool.polylith.build]
top-namespace = "textkit"

[tool.polylith.bricks]
"../../components/text_core" = "text_processing/text_core"
"../../components/config_manager" = "text_processing/config_manager"
"../../components/io_handler" = "text_processing/io_handler"
"../../bases/text_processing/cli_interface" = "text_processing/cli_interface"

[tool.hatch.build.hooks.polylith-bricks]

[tool.hatch.metadata]
allow-direct-references = true
